--- a/productsapp/src/main/resources/application.yml
+++ b/productsapp/src/main/resources/application.yml
@@ -2,11 +2,20 @@ spring:
     application:
         name: productsapp
     datasource:
-        url: jdbc:h2:mem:mydb
-        username: sa
-        password: password
-        driverClassName: org.h2.Driver
+        url: jdbc:mysql://localhost:3306/productdb
+        username: root
+        password: root
+        driverClassName: com.mysql.cj.jdbc.Driver
+#        url: jdbc:h2:mem:mydb
+#        username: sa
+#        password: password
+#        driverClassName: org.h2.Driver
         # For File based storage
         #url: jdbc:h2:file:/data/demo
     jpa:
-        spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+        hibernate:
+            ddl-auto: update
+#        spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+#    h2:
+#        console:
+#            enabled: true
