--- a/productsapp/src/main/resources/application.yml
+++ b/productsapp/src/main/resources/application.yml
@@ -13,8 +13,10 @@ spring:
         # For File based storage
         #url: jdbc:h2:file:/data/demo
     jpa:
+        show-sql: true
         hibernate:
             ddl-auto: update
+            format_sql: true
 #        spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
 #    h2:
 #        console:
